--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular-highcharts": "^6.2.6",
     "core-js": "^2.5.4",
     "highcharts": "^6.1.1",
+    "ngrx-store-freeze": "^0.2.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
