--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.0.9",
+    "@angular/cdk": "^6.4.1",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.4.1",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
@@ -28,6 +30,7 @@
     "angular-highcharts": "^6.2.6",
     "core-js": "^2.5.4",
     "highcharts": "^6.1.1",
+    "lodash": "^4.17.10",
     "ngrx-store-freeze": "^0.2.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
@@ -41,6 +44,7 @@
     "@types/highcharts": "^5.0.25",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.113",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
